Add Get and Post End Points

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BE-ShotWithYou
-spring.datasource.url=jbdc:mysql://localhost:3306/shotwithyoudb
+spring.datasource.url=jdbc:mysql://localhost:3306/shotwithyoudb
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
